helloworld/ingress-path.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: helloworld
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - http:
        paths:
          - path: /hello(.*)
            backend:
              serviceName: hello-kubernetes
              servicePort: 80

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: helloworld-res
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - http:
        paths:
          - path: /css|images|favicon.ico
            backend:
              serviceName: hello-kubernetes
              servicePort: 80
